<resources>
    <string name="app_name">Accountabilibuddies</string>
    <string name="facebook_app_id">251723465298177</string>
    <string name="gcm_sender_id">id:45653192843</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="select_date">Select Date</string>
    <string name="category">Category</string>
    <string name="motivation">Motivation</string>
    <string name="showoff">Showoff</string>
    <string name="add_friends">Add Friends</string>
    <string name="notifications">Notifications</string>
    <string name="frequency">Frequency</string>
    <string name="minus_sym">-</string>
    <string name="plus_sym">+</string>
    <string name="create">Create</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="choose_categories">Choose 3 or more topics.</string>
    <string name="connect_facebook">Connect With Facebook</string>
    <string name="done_selecting_categories">Done</string>
    <string-array name="challenge_type">
        <item>One on One</item>
        <item>Multi user</item>
    </string-array>

    <string-array name="frequency_type">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Twice a month</item>
        <item>Monthly</item>
    </string-array>

</resources>
