<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <RelativeLayout
        android:id="@+id/rlDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/tvStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/tvEndDate"
            android:layout_toStartOf="@+id/tvEndDate"
            android:layout_marginRight="18dp"
            android:layout_marginEnd="18dp" />

        <TextView
            android:id="@+id/tvEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/tvEndDate"
            android:layout_alignStart="@+id/tvEndDate"
            android:layout_marginLeft="21dp"
            android:layout_marginStart="21dp" />

        <TextView
            android:id="@+id/tvStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvStart"
            android:layout_marginLeft="79dp"
            android:layout_marginStart="79dp"
            android:layout_marginTop="14dp"
            android:text="@string/select_date" />

        <TextView
            android:id="@+id/tvEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:layout_marginLeft="79dp"
            android:layout_marginStart="79dp"
            android:layout_alignBaseline="@+id/tvStartDate"
            android:layout_alignBottom="@+id/tvStartDate"
            android:layout_toRightOf="@+id/tvStartDate"
            android:layout_toEndOf="@+id/tvStartDate" />

    </RelativeLayout>


    <TextView
        android:id="@+id/tvCategoryType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/rlDate"
        android:layout_marginTop="10dp"
        android:text="@string/category" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:layout_below="@+id/tvCategoryType" />


    <RelativeLayout
        android:id="@+id/rlMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerCategory"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/ivShowoff"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_marginLeft="88dp"
            android:layout_marginStart="88dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tvShowoff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivShowoff"
            android:layout_alignLeft="@id/ivShowoff"
            android:text="@string/showoff" />

        <ImageView
            android:id="@+id/ivMotivation"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_marginRight="93dp"
            android:layout_marginEnd="93dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/tvMotivation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivMotivation"
            android:layout_alignLeft="@id/ivMotivation"
            android:text="@string/motivation" />

    </RelativeLayout>



    <TextView
        android:id="@+id/tvAddFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlMode"
        android:layout_marginTop="10dp"
        android:text="@string/add_friends"
        android:layout_centerHorizontal="true"/>


    <RelativeLayout
        android:id="@+id/rlFriends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAddFriends"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/ivFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:srcCompat="@mipmap/ic_launcher_round" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlNotifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlFriends"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/tvNotifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/notifications"
            android:layout_centerVertical="true"/>

        <ToggleButton
            android:id="@+id/tbNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:padding="2dp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tvFrequencyTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/rlNotifications"
        android:layout_marginTop="11dp"
        android:text="@string/frequency" />

    <RelativeLayout
        android:id="@+id/rlFrequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFrequencyTag"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tvFrequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:text="Every 1 day" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/tvFrequency"
            android:text="@string/minus_sym" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tvFrequency"
            android:text="@string/plus_sym" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:layout_below="@+id/rlFrequency"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />


</RelativeLayout>