<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="ccvm"
            type="com.accountabilibuddies.accountabilibuddies.viewmodels.CreateChallengeViewModel"/>
    </data>

    <RelativeLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{ccvm.name}"
            android:addTextChangedListener="@{ccvm.getChallengeName}"
            android:layout_below="@id/tvTitle"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_below="@id/etTitle"/>

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{ccvm.description}"
            android:addTextChangedListener="@{ccvm.getChallengeDescription}"
            android:layout_below="@id/tvDescription"/>

        <RelativeLayout
            android:id="@+id/rlDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etDescription"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/tvStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/tvEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:id="@+id/tvStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/select_date"
                android:text="@{ccvm.startDate}"
                android:onClick="@{ccvm.selectStartDate}"
                android:layout_below="@+id/tvStart"
                android:layout_alignLeft="@+id/tvStart"
                android:layout_alignStart="@+id/tvStart" />

            <TextView
                android:id="@+id/tvEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/select_date"
                android:text="@{ccvm.endDate}"
                android:onClick="@{ccvm.selectEndDate}"
                android:layout_below="@+id/tvEnd"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvCategoryType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/rlDate"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/category" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:entries="@array/category"
            android:layout_marginTop="5dp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:layout_below="@+id/tvCategoryType" />

        <RelativeLayout
            android:id="@+id/rlMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnerCategory"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/ivShowoff"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@mipmap/ic_launcher"
                android:layout_marginLeft="88dp"
                android:layout_marginStart="88dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="@{ccvm.onShowoffClick}"/>

            <TextView
                android:id="@+id/tvShowoff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/ivShowoff"
                android:text="@string/showoff"
                android:layout_below="@+id/ivShowoff" />

            <ImageView
                android:id="@+id/ivMotivation"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@mipmap/ic_launcher"
                android:layout_marginRight="93dp"
                android:layout_marginEnd="93dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:onClick="@{ccvm.onMotivationClick}"/>

            <TextView
                android:id="@+id/tvMotivation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivMotivation"
                android:layout_alignLeft="@id/ivMotivation"
                android:text="@string/motivation" />

        </RelativeLayout>

        <!--<TextView-->
            <!--android:id="@+id/tvAddFriends"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/rlMode"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:text="@string/add_friends"-->
            <!--android:layout_centerHorizontal="true"/>-->

        <!--<RelativeLayout-->
            <!--android:id="@+id/rlFriends"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/tvAddFriends"-->
            <!--android:layout_marginTop="5dp">-->

            <!--<ImageView-->
                <!--android:id="@+id/ivFriend"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--app:srcCompat="@mipmap/ic_launcher_round" />-->

        <!--</RelativeLayout>-->

        <!--<RelativeLayout-->
            <!--android:id="@+id/rlNotifications"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/rlFriends"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:layout_marginTop="15dp">-->

            <!--<TextView-->
                <!--android:id="@+id/tvNotifications"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:text="@string/notifications"-->
                <!--android:layout_centerVertical="true"/>-->

            <!--<ToggleButton-->
                <!--android:id="@+id/tbNotification"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentEnd="true"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:padding="2dp"/>-->

        <!--</RelativeLayout>-->

        <TextView
            android:id="@+id/tvFrequencyTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/rlMode"
            android:layout_marginTop="11dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/frequency" />

        <RelativeLayout
            android:id="@+id/rlFrequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvFrequencyTag"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus_sym"
                android:layout_alignParentLeft="true"
                android:onClick="@{ccvm.onBtnMinusClick}"/>

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/plus_sym"
                android:onClick="@{ccvm.onBtnPlusClick}"/>

            <TextView
                android:id="@+id/tvFrequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:text="@{ccvm.frequency}" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:layout_below="@id/rlFrequency"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:onClick="@{ccvm.onCreateClicked}"/>

    </RelativeLayout>
</layout>